--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,66 +1,22 @@
-html, body{
-  height: 100%;
+.input{
   width: 100%;
-}
-body { 
-			background-image: url(http://ppcdn.500px.org/75319705/1991f76c0c6a91ae1d23eb94ac5c7a9f7e79c480/2048.jpg);
-			background-position: center center;
-			background-repeat:  no-repeat;
-			background-attachment: fixed;
-			background-size:  cover;
-			background-color: #999;
-  
+  border: 1px solid #cccccc;
+  padding: 5px;
+  border-radius: 5px;
 }
 
-.app{
-    width: 360px;
-    padding: 8% 0 0;
-    margin: auto;
-    padding: 10px;
-    position: relative;
-    z-index: 1;
-    background: #FFFFFF;
-    max-width: 360px;
-    margin: 0 auto 100px;
-    padding: 45px;
-    text-align: left;
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-    background: #76b852;
+.input-wrapper{
+  margin: 10px;
 }
 
-.app input{
-    font-family: "Roboto", sans-serif;
-    outline: 0;
-    background: #f2f2f2;
-    width: 100%;
-    border: 0;
-    margin: 0 0 15px;
-    padding: 15px;
-    box-sizing: border-box;
-    font-size: 14px;
+.error-message{
+  color: red;
 }
 
-.app button{
-  font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
-  outline: 0;
-  background: #4CAF50;
-  width: 100%;
-  border: 0;
-  padding: 15px;
-  color: #FFFFFF;
-  font-size: 14px;
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
-  cursor: pointer;
-}
-
-.app button:hover,.form button:active,.form button:focus {
-    background: #43A047;
-  }
-/*---------------------------------------------*/
-h1,h2,h3,h4,h5,h6 {
-    font-family: Poppins-Regular;
-	font-size: 50px;
-	color: #000000;
+.button{
+  border-radius: 10px;
+  background-color: rgb(24, 101, 226);
+  color: #cccccc;
+  padding: 10px 20px 10px 20px;
+  font-size: 15px;
 }
