--- a/CSS/chat-screen.css
+++ b/CSS/chat-screen.css
@@ -1,5 +1,25 @@
 #chat-screen{
+    display: grid;
+    grid-template-rows: 64px auto;
     height: 100vh;
+}
+
+#chat-screen #chat-parent{
+    display: grid;
+    grid-template-columns: 25% 50% 25%;
+    height: 100%;
+}
+
+#chat-screen #chat-parent #conversation-list{
+    border: 1px solid #e9e9e9e9;
+}
+
+#chat-screen #chat-parent #conversation-list #create-conversation{
+    border-bottom: 1px solid #e9e9e9e9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 6px 0px;
 }
 
 #chat-screen #header{
@@ -12,9 +32,10 @@
 }
 
 #chat-screen #chat-container{
-    height: calc(100% - 64px);
+    height: calc(100vh - 64px);
     display: flex;
     flex-direction: column;
+    border-right: 1px solid #e9e9e9;
 }
 
 #chat-screen #chat-container #conversation-name{
@@ -46,4 +67,32 @@
     border: 1px solid #aca3a3e9;
     padding-right: 12px;
     padding-left: 12px;
+}
+
+.conversation-item{
+    padding: 15px 10px;
+    cursor: pointer;
+}
+
+.conversation-item:hover{
+    background-color: #e8e8e8;
+}
+
+.active-conversation{
+    background-color: #e5e5e5;
+}
+
+#chat-screen #member-list #button-wrapper{
+    width: 100%;
+    padding: 10px;
+}
+
+#chat-screen #member-list #add-member-form{
+    width: 25%;
+    position: absolute;
+    bottom: 0px;
+}
+
+#chat-screen #member-list #add-member-button{
+    width: 100%;
 }
